fix backdrop not visible/not working

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -103,5 +103,9 @@ body, input[type="text"], button
 .mat-tooltip
   position: relative
   
-.mat-drawer-content
-  z-index: 0 !important
+.mat-drawer-container
+  position: fixed !important
+  overflow: visible !important
+
+.mat-drawer-backdrop 
+  height: 100vh 
